@@ -21,6 +21,7 @@ import java.net.URI;
 import java.net.UnknownHostException;
 import java.net.http.WebSocket;
 import java.nio.ByteBuffer;
+import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -31,24 +32,33 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import org.eclipse.jetty.client.BytesRequestContent;
 import org.eclipse.jetty.client.ContentResponse;
+import org.eclipse.jetty.client.FormRequestContent;
 import org.eclipse.jetty.client.HttpClient;
+import org.eclipse.jetty.client.MultiPartRequestContent;
 import org.eclipse.jetty.client.transport.HttpClientConnectionFactory;
 import org.eclipse.jetty.client.transport.HttpClientTransportDynamic;
 import org.eclipse.jetty.client.transport.HttpClientTransportOverHTTP;
+import org.eclipse.jetty.http.HttpFields;
 import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpScheme;
 import org.eclipse.jetty.http.HttpStatus;
+import org.eclipse.jetty.http.HttpVersion;
 import org.eclipse.jetty.http.MultiPart;
 import org.eclipse.jetty.http.MultiPartByteRanges;
 import org.eclipse.jetty.http2.client.HTTP2Client;
+import org.eclipse.jetty.http2.client.transport.ClientConnectionFactoryOverHTTP2;
 import org.eclipse.jetty.http2.client.transport.HttpClientTransportOverHTTP2;
 import org.eclipse.jetty.http3.client.HTTP3Client;
 import org.eclipse.jetty.http3.client.transport.HttpClientTransportOverHTTP3;
@@ -62,7 +72,10 @@ import org.eclipse.jetty.tests.testers.Tester;
 import org.eclipse.jetty.toolchain.test.FS;
 import org.eclipse.jetty.toolchain.test.PathMatchers;
 import org.eclipse.jetty.util.BlockingArrayQueue;
+import org.eclipse.jetty.util.Fields;
+import org.eclipse.jetty.util.MultiMap;
 import org.eclipse.jetty.util.StringUtil;
+import org.eclipse.jetty.util.UrlEncoded;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
@@ -71,6 +84,7 @@ import org.junit.jupiter.api.condition.EnabledForJreRange;
 import org.junit.jupiter.api.condition.JRE;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -1959,6 +1973,241 @@ public class DistributionTests extends AbstractJettyHomeTest
                     .timeout(15, TimeUnit.SECONDS)
                     .send();
                 assertEquals(HttpStatus.OK_200, response.getStatus());
+            }
+        }
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = HttpVersion.class, names = {"HTTP_1_1", "HTTP_2"})
+    public void testEagerContentHandler(HttpVersion httpVersion) throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .build();
+
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=resources,test-keystore,http,http2c,ee11-deploy,ee11-annotations,eager-content"))
+        {
+            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path war = distribution.resolveArtifact("org.eclipse.jetty.demos:jetty-servlet5-demo-simple-webapp:war:" + jettyVersion);
+            String contextPath = "ctx";
+            distribution.installWar(war, contextPath);
+
+            int port = Tester.freePort();
+            int maxRetainedBytes = 128;
+            String[] properties = {
+                "jetty.http.selectors=1",
+                "jetty.http.port=" + port,
+                "jetty.eager.content.framingOverhead=16",
+                "jetty.eager.content.maxRetainedBytes=" + maxRetainedBytes,
+                "jetty.eager.content.rejectWhenExceeded=false"
+            };
+            try (JettyHomeTester.Run run2 = distribution.start(properties))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", START_TIMEOUT, TimeUnit.SECONDS));
+
+                startHttpClient(() ->
+                {
+                    ClientConnector connector = new ClientConnector();
+                    HTTP2Client h2Client = new HTTP2Client(connector);
+                    return new HttpClient(new HttpClientTransportDynamic(connector, HttpClientConnectionFactory.HTTP11, new ClientConnectionFactoryOverHTTP2.HTTP2(h2Client)));
+                });
+
+                IntStream.of(maxRetainedBytes / 2, maxRetainedBytes * 10).forEach(contentLength ->
+                {
+                    try
+                    {
+                        ContentResponse response = client.newRequest("http://localhost:" + port + "/" + contextPath + "/echo/content")
+                            .method("POST")
+                            .version(httpVersion)
+                            .body(new BytesRequestContent(new byte[contentLength]))
+                            .send();
+
+                        assertEquals(HttpStatus.OK_200, response.getStatus());
+                        assertEquals(contentLength, response.getContent().length);
+                    }
+                    catch (Exception x)
+                    {
+                        throw new RuntimeException(x);
+                    }
+                });
+            }
+        }
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = HttpVersion.class, names = {"HTTP_1_1", "HTTP_2"})
+    public void testEagerFormContentHandler(HttpVersion httpVersion) throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .build();
+
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=resources,test-keystore,http,http2c,ee11-deploy,ee11-annotations,eager-content"))
+        {
+            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path war = distribution.resolveArtifact("org.eclipse.jetty.demos:jetty-servlet5-demo-simple-webapp:war:" + jettyVersion);
+            String contextPath = "ctx";
+            distribution.installWar(war, contextPath);
+
+            int port = Tester.freePort();
+            String[] properties = {
+                "jetty.http.selectors=1",
+                "jetty.http.port=" + port,
+                "jetty.eager.form.maxFields=16",
+                "jetty.eager.form.maxLength=128"
+            };
+            try (JettyHomeTester.Run run2 = distribution.start(properties))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", START_TIMEOUT, TimeUnit.SECONDS));
+
+                startHttpClient(() ->
+                {
+                    ClientConnector connector = new ClientConnector();
+                    HTTP2Client h2Client = new HTTP2Client(connector);
+                    return new HttpClient(new HttpClientTransportDynamic(connector, HttpClientConnectionFactory.HTTP11, new ClientConnectionFactoryOverHTTP2.HTTP2(h2Client)));
+                });
+
+                Map<String, List<String>> inMap = new LinkedHashMap<>();
+                inMap.put("greet", List.of("Hello World"));
+                inMap.put("currency", List.of("€"));
+                Charset charset = StandardCharsets.UTF_8;
+                ContentResponse response = client.newRequest("http://localhost:" + port + "/" + contextPath + "/echo/form")
+                    .method("POST")
+                    .version(httpVersion)
+                    .body(new FormRequestContent(new Fields(new MultiMap<>(inMap)), charset))
+                    .send();
+
+                assertEquals(HttpStatus.OK_200, response.getStatus());
+                LinkedHashMap<String, List<String>> outMap = new LinkedHashMap<>();
+                UrlEncoded.decodeTo(response.getContentAsString(), (name, value) -> outMap.computeIfAbsent(name, k -> new ArrayList<>()).add(value), charset);
+                assertEquals(inMap, outMap);
+            }
+        }
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = HttpVersion.class, names = {"HTTP_1_1", "HTTP_2"})
+    public void testEagerMultiPartContentHandler(HttpVersion httpVersion) throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .build();
+
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=resources,test-keystore,http,http2c,ee11-deploy,ee11-annotations,eager-content"))
+        {
+            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path jettyLogging = distribution.getJettyBase().resolve("resources/jetty-logging.properties");
+            String loggingConfig = """
+                org.eclipse.jetty.LEVEL=DEBUG
+                """;
+            Files.writeString(jettyLogging, loggingConfig, StandardOpenOption.TRUNCATE_EXISTING);
+            long fileLength = Files.size(jettyLogging);
+
+            Path war = distribution.resolveArtifact("org.eclipse.jetty.demos:jetty-servlet5-demo-simple-webapp:war:" + jettyVersion);
+            String contextPath = "ctx";
+            distribution.installWar(war, contextPath);
+
+            Path work = distribution.getJettyBase().resolve("work");
+
+            int port = Tester.freePort();
+            String[] properties = {
+                "jetty.http.selectors=1",
+                "jetty.http.port=" + port,
+                "jetty.eager.multipart.location=" + work.toAbsolutePath(),
+                "jetty.eager.multipart.maxParts=3",
+                "jetty.eager.multipart.maxSize=1024",
+                "jetty.eager.multipart.maxMemoryPartSize=0",
+                "jetty.eager.multipart.maxHeadersSize=1024",
+                "jetty.eager.multipart.useFilesForPartsWithoutFileName=true"
+            };
+            try (JettyHomeTester.Run run2 = distribution.start(properties))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", START_TIMEOUT, TimeUnit.SECONDS));
+
+                startHttpClient(() ->
+                {
+                    ClientConnector connector = new ClientConnector();
+                    HTTP2Client h2Client = new HTTP2Client(connector);
+                    return new HttpClient(new HttpClientTransportDynamic(connector, HttpClientConnectionFactory.HTTP11, new ClientConnectionFactoryOverHTTP2.HTTP2(h2Client)));
+                });
+
+                MultiPartRequestContent content = new MultiPartRequestContent();
+                content.addPart(new MultiPart.ByteBufferPart("part1", null, HttpFields.EMPTY, StandardCharsets.UTF_8.encode("13-bytes-long")));
+                content.addPart(new MultiPart.PathPart("part2", null, HttpFields.EMPTY, distribution.getJettyBase().resolve("resources/jetty-logging.properties")));
+                content.close();
+                ContentResponse response = client.newRequest("http://localhost:" + port + "/" + contextPath + "/echo/multipart")
+                    .method("POST")
+                    .version(httpVersion)
+                    .body(content)
+                    .send();
+
+                assertEquals(HttpStatus.OK_200, response.getStatus());
+                String[] lines = StringUtil.csvSplit(response.getContentAsString());
+                assertEquals(2, lines.length);
+                assertEquals(lines[0], "name=part1&length=13");
+                assertEquals(lines[1], "name=part2&length=" + fileLength);
+            }
+        }
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"ee8", "ee9", "ee10"})
+    public void testLimitHandlers(String env) throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .build();
+
+        String[] modules = {
+            "http",
+            "qos",
+            "size-limit",
+            "thread-limit",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env)
+        };
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=" + String.join(",", modules)))
+        {
+            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path jettyLogging = distribution.getJettyBase().resolve("resources/jetty-logging.properties");
+            String loggingConfig = """
+                org.eclipse.jetty.LEVEL=DEBUG
+                """;
+            Files.writeString(jettyLogging, loggingConfig, StandardOpenOption.TRUNCATE_EXISTING);
+
+            Path war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-simple-webapp:war:" + jettyVersion);
+            distribution.installWar(war, "test");
+
+            int port = Tester.freePort();
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.selectors=1", "jetty.http.port=" + port))
+            {
+                try
+                {
+                    assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", START_TIMEOUT, TimeUnit.SECONDS));
+
+                    startHttpClient();
+                    URI serverUri = URI.create("http://localhost:" + port + "/test/");
+                    ContentResponse response = client.newRequest(serverUri)
+                        .timeout(15, TimeUnit.SECONDS)
+                        .send();
+                    assertEquals(HttpStatus.OK_200, response.getStatus());
+                }
+                finally
+                {
+                    run2.getLogs().forEach(System.err::println);
+                }
             }
         }
     }
